extensions/positron-python/pythonFiles/tests/testing_tools/adapter/.data/syntax-error/tests/test_spam.py

def test_simple():
    assert True


# A syntax error:
:
